@@ -1,2 +1,2 @@
 configure autom4te.cache
-bin obj mingw-get.layout mingw-get.depend
+bin obj mingw-get.layout mingw-get.depend *.d
